# ai_data_intel

./: .gitignore  FREE_SETUP_GUIDE.md  MISSING_COLLECTORS_FIXED.md  ML_MODELS_FIXED.md  PRODUCTION_READY_CONFIG.yaml  README.md  REAL_API_FIXES.md  SECURITY_CONFIG.md  STARTUP_GUIDE.md  SUPABASE_SETUP_GUIDE.md  SYSTEM_STATUS.md  TELEGRAM_CONFIG.md  TELEGRAM_MTProto_IMPLEMENTATION.md  configure_monitored_chats.sql  database_schema.sql  docker-compose.postgresql.yml  free.env  install.sh  populate_test_messages.sql  production.env  quick_setup_data.sql  requirements.txt  requirements_minimal.txt  run_system.py  setup.py  setup_postgresql.py  setup_real_apis.py  start-autonomous.sh  start-free.sh  start-no-docker.sh  start-supabase.sh  start.sh  stop-free.sh  stop-supabase.sh  stop.sh  supabase.env  telegram.env.template  test-shutdown.sh
config/: config.yaml
init-scripts/: 01-init-database.sql
rust-intelligence-system/: Cargo.toml  Dockerfile  ENTERPRISE_PRODUCTION_READY.md  README.md  UPGRADED_README.md  config.template.yaml  docker-compose.free.yml  docker-compose.supabase.yml  docker-compose.yml
rust-intelligence-system/intelligence-analytics/: Cargo.toml
rust-intelligence-system/intelligence-analytics/src/: data_processor.rs  lib.rs  mass_processor.rs  ml_models.rs  nft_tracker.rs  real_ml_models.rs  relationship_mapper.rs  username_analyzer.rs
rust-intelligence-system/intelligence-api/: Cargo.toml
rust-intelligence-system/intelligence-api/public/: index.html
rust-intelligence-system/intelligence-api/src/: main.rs
rust-intelligence-system/intelligence-collectors/: Cargo.toml
rust-intelligence-system/intelligence-collectors/src/: api_collector.rs  blockchain_collector.rs  data_ingestion.rs  lib.rs  real_web_scraper.rs  social_media_collector.rs  stream_processor.rs  telegram_client.rs  telegram_collector.rs  web_scraper.rs
rust-intelligence-system/intelligence-core/: Cargo.toml
rust-intelligence-system/intelligence-core/src/: config.rs  errors.rs  events.rs  lib.rs  metrics.rs  types.rs  validation.rs
rust-intelligence-system/intelligence-enterprise/: Cargo.toml
rust-intelligence-system/intelligence-enterprise/src/: account_monitor.rs  automated_deployment.rs  billing_system.rs  data_governance.rs  distributed_processing.rs  enterprise_dashboard.rs  lib.rs
rust-intelligence-system/intelligence-monitoring/: Cargo.toml
rust-intelligence-system/intelligence-monitoring/src/: health_checks.rs  lib.rs
rust-intelligence-system/intelligence-security/: Cargo.toml
rust-intelligence-system/intelligence-security/src/: authentication.rs  authorization.rs  lib.rs
rust-intelligence-system/k8s/: configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  pvc.yaml  rbac.yaml  secrets.yaml  services.yaml
src/: advanced_ai_agents_system.py  advanced_analysis_dashboard.py  advanced_analytics_engine.py  advanced_ml_models.py  advanced_profile_analyzer.py  advanced_telegram_monitor.py  agent_communication_protocol.py  ai_agents_system.py  ai_api_integration.py  blockchain_intelligence_system.py  chatgpt_bypass_integration.py  database_manager.py  enhanced_data_collector.py  intelligent_ai_conversation_system.py  promotion_activity_analyzer.py  real_time_analytics_engine.py  real_time_streaming_engine.py
