[workspace]
members = [
    "intelligence-core",
    "intelligence-api",
    "intelligence-agents",
    "intelligence-analytics",
    "intelligence-streaming",
    "intelligence-storage",
    "intelligence-security",
    "intelligence-monitoring"
]

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "redis", "chrono", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp"] }

kafka = "0.9"
lapin = { version = "2.3", features = ["tokio-io"] }

axum = { version = "0.7", features = ["ws", "headers", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "auth"] }
tonic = "0.10"
prost = "0.12"

ring = "0.17"
argon2 = "0.5"
jwt-simple = "0.11"
rustls = "0.21"
rustls-pemfile = "1.0"

candle-core = "0.3"
candle-nn = "0.3"
candle-transformers = "0.3"
ndarray = "0.15"
linfa = "0.7"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
opentelemetry = "0.21"
opentelemetry-jaeger = "0.20"

config = "0.14"
clap = { version = "4.4", features = ["derive"] }

uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
dashmap = "5.5"
arc-swap = "1.6"

web3 = "0.19"
ethers = "2.0"

polars = { version = "0.35", features = ["lazy", "temporal", "strings"] }
