[package]
name = "intelligence-analytics"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
arc-swap = { workspace = true }
tracing = { workspace = true }
polars = { workspace = true }
ndarray = { workspace = true }
linfa = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }

intelligence-core = { path = "../intelligence-core" }
intelligence-security = { path = "../intelligence-security" }
async-trait = "0.1"
futures = "0.3"
rayon = "1.8"
crossbeam = "0.8"
rand = "0.8"
regex = "1.10"
