[package]
name = "intelligence-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "intelligence-api"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
redis = { version = "0.25", features = ["tokio-comp"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
rand = "0.8"
regex = "1.10"

# Telegram MTProto integration
grammers-client = "0.4"
grammers-tl-types = "0.4"
grammers-session = "0.4"
tokio-tungstenite = "0.21"
futures = "0.3"
