[package]
name = "intelligence-security"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
ring = { workspace = true }
argon2 = { workspace = true }
jwt-simple = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }

intelligence-core = { path = "../intelligence-core" }
base64 = "0.21"
hex = "0.4"
scrypt = "0.11"
pbkdf2 = "0.12"
hmac = "0.12"
sha2 = "0.10"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
rand = "0.8"
